# py-smsify

./: .gitignore  LICENSE  README.md  pyproject.toml
py_smsify/: __init__.py
tests/: test_py_smsify.py
